gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test21477.d
version https://git-lfs.github.com/spec/v1
oid sha256:9d23e4fe0fbe4b587acda30f64d67d23fcc790f330745598b960c7d794ae61b4
size 277
